# wordle-solver

./: .gitignore  Cargo.toml  LICENSE  README.md  serverless.yml
.circleci/: config.yml
dictionary/: words.txt
fixtures/: sample_request.json
src/: lib.rs  utils.rs
src/functions/: generate_guesses.rs
